# on-chain-portfolio-analytics

backend/: .env.example  .gitignore  INSTALL.md  README.md  db-setup.sh  env.example  playground.ipynb  pyproject.toml
backend/src/database/: __init__.py
backend/src/database/tests/: conftest.py  test_duckdb.py  test_sqlite.py
src/database/: schema.py  session.py  settings.py  setup.py
