[project]
name = "on-chain-portfolio-analytics-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pandas>=2.3.2",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.42.0",
    "streamlit>=1.49.1",
    "web3>=7.13.0",
]

[project.optional-dependencies]
# Database driver extras - install only what you need
postgresql = [
    "psycopg2-binary>=2.9.0", # PostgreSQL driver
]
sqlite = [
    "aiosqlite>=0.19.0", # Async SQLite driver
]
duckdb = [
    "duckdb>=0.9.0", # DuckDB driver
    "duckdb-engine>=0.17.0", # SQLAlchemy integration
]
# Testing dependencies
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
# Development dependencies
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
asyncio_mode = "auto"
